HEIF: properly catch attempts to store invalid CICP values

BUG: 460715